--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,7 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.1.056</Version>
+    <Version>0.1.058</Version>
     <Description>F# to Native Compiler with Zero-Allocation Guarantees using XParsec</Description>
     <Authors>Speakez LLC</Authors>
     <PackageTags>fsharp;compiler;native;zero-allocation;xparsec;mlir;llvm</PackageTags>
@@ -38,6 +38,10 @@
     <Compile Include="Dabbit/Closures/ClosureTransformer.fs" />
     <Compile Include="Dabbit/UnionLayouts/FixedLayoutCompiler.fs" />
     <Compile Include="Dabbit/BindingMetadata/BindingAttributes.fs" />
+    <Compile Include="Dabbit/TreeShaking/ReachabilityAnalyzer.fs" />
+    <Compile Include="Dabbit/TreeShaking/DependencyGraphBuilder.fs" />
+    <Compile Include="Dabbit/TreeShaking/ReachabilityTraversal.fs" />
+    <Compile Include="Dabbit/TreeShaking/AstPruner.fs" />
 
     <!-- MLIR/LLVM Conversion Pipeline -->
     <Compile Include="Core/Conversion/LoweringPipeline.fs" />
@@ -130,6 +134,8 @@
   </PropertyGroup>
 
 </Project>
+
+
 
 
 
