--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,7 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.1.085</Version>
+    <Version>0.1.087</Version>
     <Description>F# to Native Compiler with Zero-Allocation Guarantees using XParsec</Description>
     <Authors>Speakez LLC</Authors>
     <PackageTags>fsharp;compiler;native;zero-allocation;xparsec;mlir;llvm</PackageTags>
@@ -16,7 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- Core XParsec Foundation (must be first) -->
+
+    <Compile Include="Core/Utilities/IntermediateWriter.fs" />
     <Compile Include="Core/XParsec/Foundation.fs" />
 
     <!-- Oak AST Definition (core data structures) -->
@@ -137,6 +138,8 @@
   </PropertyGroup>
 
 </Project>
+
+
 
 
 
