--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,7 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.2.003</Version>
+    <Version>0.2.004</Version>
     <Description>F# to Native Compiler with Zero-Allocation Guarantees using XParsec</Description>
     <Authors>Speakez LLC</Authors>
     <PackageTags>fsharp;compiler;native;zero-allocation;xparsec;mlir;llvm</PackageTags>
@@ -38,6 +38,7 @@
       
       <!-- Analysis and Transformations -->
       <Compile Include="Dabbit/Analysis/ReachabilityAnalyzer.fs" />
+      <Compile Include="Dabbit/Analysis/ReachabilityTraversal.fs" />
       <Compile Include="Dabbit/Analysis/DependencyGraphBuilder.fs" />
       <Compile Include="Dabbit/Analysis/AstPruner.fs" />
       <Compile Include="Dabbit/Transformations/ClosureElimination.fs" />
@@ -137,6 +138,7 @@
   </PropertyGroup>
 
 </Project>
+
 
 
 
