--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,7 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.2.049</Version>
+    <Version>0.2.051</Version>
     <Description>F# to Native Compiler with Zero-Allocation Guarantees using XParsec</Description>
     <Authors>Speakez LLC</Authors>
     <PackageTags>fsharp;compiler;native;zero-allocation;xparsec;mlir;llvm</PackageTags>
@@ -38,6 +38,8 @@
       
       <!-- Pure FCS Processing -->
       <Compile Include="Core/FCSProcessing/TypeExtractor.fs" />
+      <Compile Include="Core/FCSProcessing/DependencyExtractor.fs" />
+      <Compile Include="Core/FCSProcessing/AstMerger.fs" />
       <Compile Include="Core/FCSProcessing/DependencyResolver.fs" />
       
       <!-- ===== DABBIT - Orchestration and transformation ===== -->
@@ -159,4 +161,6 @@
   </PropertyGroup>
 
 </Project>
+
+
 
