--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,220 +7,57 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.2.109</Version>
-    <Description>F# to Native Compiler with Zero-Allocation Guarantees using XParsec</Description>
-    <Authors>Speakez LLC</Authors>
-    <PackageTags>fsharp;compiler;native;zero-allocation;xparsec;mlir;llvm</PackageTags>
-    <RepositoryType>git</RepositoryType>
+    <Version>0.2.124</Version>
+    <Description>Firefly Minimal - FCS Ingestion and Reachability Analysis Only</Description>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-      <!-- ===== CORE - Only primitives and pure functions ===== -->
+      <!-- ===== CORE INFRASTRUCTURE - Required ===== -->
       
-      <!-- Core Infrastructure -->
+      <!-- Core Utilities -->
       <Compile Include="Core/Utilities/IntermediateWriter.fs" />
-      <Compile Include="Core/Utilities/RemoveIntermediates.fs" />
       
       <!-- Core Type System --> 
       <Compile Include="Core/Types/Dialects.fs" />
       <Compile Include="Core/Types/TypeSystem.fs" />   
-      <Compile Include="Core/Types/MLIRContext.fs" />   
       <Compile Include="Core/XParsec/Foundation.fs" />  
-      <Compile Include="Core/Utilities/ReadSourceFile.fs" />
       
-      <!-- Core AST -->
-      <Compile Include="Core/AST/Traversal.fs" />           <!-- Generic AST traversal engine -->
+      <!-- ===== FCS INGESTION - Your Working Implementation ===== -->
       
-      <!-- Memory Layout -->
-      <Compile Include="Core/MemoryLayout/LayoutAnalyzer.fs" />
-      <Compile Include="Core/MemoryLayout/UnionOptimizer.fs" />
+      <Compile Include="Core/FCSIngestion/ProjectOptionsLoader.fs" />     <!-- Your working loader -->
+      <Compile Include="Core/FCSIngestion/ProjectProcessor.fs" />         <!-- Your working processor -->
+      <Compile Include="Core/FCSIngestion/SymbolCollector.fs" />          <!-- Your working collector -->
       
-      <!-- Pure FCS Processing -->
-      <Compile Include="Core/FCSIngestion/TypeExtractor.fs" />
-      <Compile Include="Core/FCSIngestion/FileLoader.fs" />
-      <Compile Include="Core/FCSIngestion/SymbolExtraction.fs" />
-      <Compile Include="Core/FCSIngestion/AstMerger.fs" />
-      <Compile Include="Core/FCSIngestion/DependencyResolver.fs" />
+      <!-- ===== ANALYSIS - Updated for Typed AST ===== -->
       
-      <!-- ===== DABBIT - Orchestration and transformation ===== -->
+      <Compile Include="Dabbit/Analysis/ReachabilityAnalyzer.fs" />       <!-- Updated for SymbolCollectionResult -->
       
-      <!-- Bindings (Foundation for code generation) -->
-      <Compile Include="Dabbit/Bindings/PatternLibrary.fs" />
-      <Compile Include="Dabbit/Bindings/SymbolRegistry.fs" />
-      <Compile Include="Dabbit/Bindings/BindingAttributes.fs" />
+      <!-- ===== PIPELINE - Simplified ===== -->
       
-      <!-- Analysis (Uses Core/AST/Traversal) -->
-      <Compile Include="Dabbit/Analysis/DependencyGraphBuilder.fs" />
-      <Compile Include="Dabbit/Analysis/ScopeManager.fs" />
-      <Compile Include="Dabbit/Analysis/ReachabilityDiagnostics.fs" />
-      <Compile Include="Dabbit/Analysis/ReachabilityAnalyzer.fs" />
-      <Compile Include="Dabbit/Analysis/AstPruner.fs" />
-      <Compile Include="Dabbit/Analysis/CompilationUnit.fs" />
+      <Compile Include="Dabbit/Pipeline/CompilationTypes.fs" />           <!-- Basic types -->
+      <Compile Include="Dabbit/Pipeline/CompilationOrchestrator.fs" />    <!-- Simplified orchestrator -->
       
-      <!-- Code Generation (Refactored from single MLIRGenerator.fs) -->
-      <Compile Include="Dabbit/CodeGeneration/TypeMapping.fs" />           <!-- F# to MLIR types -->
-      <Compile Include="Dabbit/CodeGeneration/MLIRSyntax.fs" />
-      <Compile Include="Dabbit/CodeGeneration/MLIRDialects.fs" />
-      <Compile Include="Dabbit/CodeGeneration/MLIREmitter.fs" />           <!-- Core builder monad -->
-      <Compile Include="Dabbit/CodeGeneration/MLIRBuiltins.fs" />          <!-- Built-in functions -->
-      <Compile Include="Dabbit/CodeGeneration/MLIROperatorGenerator.fs" /> <!-- Operator handling -->
-      <Compile Include="Dabbit/CodeGeneration/MLIRTypeOperations.fs" />    <!-- Type conversions -->
-      <Compile Include="Dabbit/CodeGeneration/MLIRControlFlow.fs" />       <!-- Control structures -->
-      <Compile Include="Dabbit/CodeGeneration/MLIRExpressionGenerator.fs" /><!-- Expression gen -->
-      <Compile Include="Dabbit/CodeGeneration/MLIRModuleGenerator.fs" />   <!-- Module/function gen -->
+      <!-- ===== CLI - Minimal Test Interface ===== -->
       
-      <!-- Transformations -->
-      <Compile Include="Dabbit/Transformations/ClosureElimination.fs" />
-      <Compile Include="Dabbit/Transformations/StackAllocation.fs" />
-      <Compile Include="Dabbit/Transformations/ASTTransformer.fs" /> 
-      
-      <!-- Integration -->
-      <Compile Include="Dabbit/Integration/AlloyBindings.fs" />
-      
-      <!-- Pipeline Orchestration (Updated section) -->
-      <Compile Include="Dabbit/Pipeline/CompilationTypes.fs" />  
-      <Compile Include="Dabbit/Pipeline/FCSPipeline.fs" />
-      <Compile Include="Dabbit/Pipeline/LoweringPipeline.fs" />
-      <Compile Include="Dabbit/Pipeline/OptimizationPipeline.fs" />
-      <Compile Include="Dabbit/Pipeline/CompilationOrchestrator.fs" />
-      
-      <!-- ===== CLI - Top level ===== -->
-      
-      <Compile Include="CLI/Configurations/ProjectConfig.fs" />
-      <Compile Include="CLI/Diagnostics/EnvironmentInfo.fs" />
-      <Compile Include="CLI/Diagnostics/ToolchainVerification.fs" />
-      <Compile Include="CLI/Commands/CompileCommand.fs" />
-      <Compile Include="CLI/Commands/VerifyCommand.fs" />
-      <Compile Include="CLI/Commands/DoctorCommand.fs" />
-      <Compile Include="CLI/Program.fs" />
+      <Compile Include="CLI/Program-Minimal.fs" />                        <!-- Simple test program -->
   </ItemGroup>
 
   <ItemGroup>
     <!-- Core F# dependencies -->
     <PackageReference Update="FSharp.Core" Version="[9.0.300]" />
 
-    <!-- Command line argument parsing -->
-    <PackageReference Include="Argu" Version="6.1.1" />
-    <PackageReference Include="FSharp.SystemTextJson" Version="*" />
+    <!-- F# Compiler Services -->
     <PackageReference Include="FSharp.Compiler.Service" Version="43.9.300" />
 
-    <PackageReference Include="Fantomas.Core" Version="6.2.3" />
-    <PackageReference Include="Fantomas.FCS" Version="6.2.3" />
-
-    <!-- XParsec - Critical parser combinator library -->
+    <!-- XParsec - For project file parsing -->
     <PackageReference Include="XParsec" Version="0.1.0" />
-    <PackageReference Include="Llvm.NET" Version="8.0.1" />
+    
+    <!-- Command line parsing -->
+    <PackageReference Include="Argu" Version="6.1.1" />
   </ItemGroup>
 
-  <!-- Build Configuration -->
-  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <Optimize>false</Optimize>
-    <DebugType>full</DebugType>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>portable</DebugType>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  </PropertyGroup>
-
-  <!-- Compiler Configuration -->
-  <PropertyGroup>
-    <LangVersion>preview</LangVersion>
-    <TailCalls>true</TailCalls>
-  </PropertyGroup>
-
-  <!-- MSBuild targets for XParsec validation -->
-  <Target Name="ValidateXParsecArchitecture" BeforeTargets="Build">
-    <Message Text="Validating XParsec-based architecture..." Importance="normal" />
-    <Message Text="✓ XParsec architecture validation passed" Importance="normal" />
-  </Target>
-
-  <!-- Clean intermediate files -->
-  <Target Name="CleanIntermediates" AfterTargets="Clean">
-    <Message Text="Cleaning intermediate files..." Importance="normal" />
-  </Target>
-
-  <!-- Package metadata -->
-  <PropertyGroup>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/speakez-llc/firefly</PackageProjectUrl>
-    <PackageReleaseNotes>
-      Version 0.2.0-alpha:
-      - Complete XParsec-based architecture implementation
-      - Zero-allocation F# to native compilation
-      - Comprehensive MLIR/LLVM pipeline using parser combinators
-      - Eliminated all regex-based shortcuts
-      - Hard failure compilation semantics (no fallbacks)
-      - Type-safe configuration parsing with XParsec
-      - Full Oak AST transformation pipeline
-    </PackageReleaseNotes>
-  </PropertyGroup>
-
-  <!-- Analyzer configuration -->
-  <PropertyGroup>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <NoWarn>$(NoWarn);FS0025;FS0040</NoWarn>
-  </PropertyGroup>
-
 </Project>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
