--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,7 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.3.005</Version>
+    <Version>0.3.013</Version>
     <Description>Firefly F# Compiler - FCS Ingestion, AST Reachability Analysis, and Pruning</Description>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
@@ -17,6 +17,7 @@
       
       <!-- Core Utilities - Must come first -->
       <Compile Include="Core/Utilities/IntermediateWriter.fs" />
+      <Compile Include="Core/Utilities/RemoveIntermediates.fs" />
       
       <!-- Core Type System and Foundation --> 
       <Compile Include="Core/Types/Dialects.fs" />
@@ -86,6 +87,14 @@
   </ItemGroup>
 
 </Project>
+
+
+
+
+
+
+
+
 
 
 
