--- a/src/Firefly.fsproj
+++ b/src/Firefly.fsproj
@@ -7,7 +7,7 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>firefly</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <Version>0.4.016</Version>
+    <Version>0.4.018</Version>
     <Description>Firefly F# Compiler - Deep FCS Integration</Description>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
@@ -34,6 +34,13 @@
       <Compile Include="Core/FCS/ProjectContext.fs" />
       <Compile Include="Core/FCS/SymbolAnalysis.fs" />
       <Compile Include="Core/FCS/TypedASTAccess.fs" />
+      
+      <!-- Program Semantic Graph (new) -->
+      <Compile Include="Core/PSG/Types.fs" />
+      <Compile Include="Core/PSG/Correlation.fs" />
+      <Compile Include="Core/PSG/SymbolAnalysis.fs" />
+      <Compile Include="Core/PSG/Builder.fs" />
+      <Compile Include="Core/PSG/DebugOutput.fs" />
       
       <!-- Metadata Processing (new) -->
       <Compile Include="Core/Meta/Parser.fs" />
@@ -68,18 +75,4 @@
   </ItemGroup>
 
 </Project>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
